--- a/style.scss
+++ b/style.scss
@@ -53,11 +53,11 @@ table {
 .splash-image {
   height: 100vh;
   width: 100%;
-  background: url(./code.jpg);
+  background: #3a5488;
   background-size: cover;
   padding: calc((100vh - (1 * 12vw) - (2 * 7vw))/2) 0;
   h1,h2 {
-    color: #fff;
+    color: #faebd7;
     margin: 0 auto;
     text-align: center;
   }
